# Padawan

./: .gitignore  CMakeLists.txt  README.md  Seite2.qml  main.cpp  main.qml
tools/: adbdeploy.sh  adbreload.sh  create_apk_key.sh
